name:                 COMP1100-Final-Exam-2016
version:              0.1.0.0
synopsis:
-- description:
-- license:
-- license-file:
homepage:
author:               Danny Feng (Yanming)
maintainer:           u6611178@anu.edu.au
category:
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable COMP1100-Final-Exam-2016
  main-is:              Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:        base >= 4.7 && < 5
  hs-source-dirs:       src
  default-language:     Haskell2010
